--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
   <body>
     <%= render partial: "partials/navbar" %>
     <div class="container">
-      <%= yield %>
+      <div class="container-desktop">
+        <%= yield %>
+      </div>
     </div>
   </body>
 </html>
