--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,11 +1,15 @@
-<nav>
-  <div class="nav-wrapper black">
-    <a href="#" class="brand-logo cyan-text">Fink Analytical Consulting</a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">JavaScript</a></li>
-    </ul>
-  </div>
-</nav>
+<ul id="slide-out" class="side-nav fixed black">
+  <li>
+    <a href="#" class="brand-logo cyan-text">
+      <h4>
+        Fink Analytical Consulting
+      </h4>
+    </a>
+  </li>
+  <%= render partial: "partials/nav_links" %>
+</ul>
+<a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
 
+<script type="text/javascript" charset="utf-8">
+  $(".button-collapse").sideNav();
+</script>
