--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,10 @@
-<%= @intro %>
-<div class="scatter">
+<div class="center">
+  <% @intro.each do |i| %>
+    <h3>
+      <%= i %>
+    </h3>
+  <% end %>
+</div>
 
+<div class="scatter">
 </div>
