--- a/app/views/home/technologies.html.erb
+++ b/app/views/home/technologies.html.erb
@@ -2,6 +2,9 @@
   <h3>
     Technologies We Use
   </h3>
+  <p>
+    <%= @technology_blurb %>
+  </p>
 </div>
 <% @technologies.each do |technology| %>
   <div class="card-panel grey lighten-5 z-depth-1">
