--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,6 +1,6 @@
 <ul id="slide-out" class="side-nav fixed black">
   <li>
-    <a href="#" class="brand-logo cyan-text">
+    <a href="/" class="brand-logo cyan-text">
       <h4>
         Fink Analytical Consulting
       </h4>
