add technology links

--- a/app/views/home/technologies.html.erb
+++ b/app/views/home/technologies.html.erb
@@ -17,7 +17,7 @@
           <%= technology[:description] %>
         </h5>
         <h5 class="black-text">
-          <a href="http://www.url.com" target="_blank">Project Page</a>
+          <a href="<%= technology[:link] %>" target="_blank">Project Page</a>
         </h5>
       </div>
     </div>
