--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -15,3 +15,14 @@ img.responsive-img {
   max-width: 50%;
   height: auto;
 }
+.map-container {
+  margin-top: 8%;
+}
+.input-field textarea[class=materialize-textarea]:focus {
+  border-bottom: 1px solid #00bcd4;
+  box-shadow: 0 1px 0 0 #00bcd4;
+}
+.input-field input[class=email]:focus {
+  border-bottom: 1px solid #00bcd4;
+  box-shadow: 0 1px 0 0 #00bcd4;
+}
