--- a/app/views/partials/_nav_links.html.erb
+++ b/app/views/partials/_nav_links.html.erb
@@ -7,3 +7,6 @@
 <li>
   <%= link_to "About", about_path, class: "side-nav--link" %>
 </li>
+<li>
+  <%= link_to "Contact", contact_path, class: "side-nav--link" %>
+</li>
