--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Fink Analytical Consulting</title>
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <script src="//maps.google.com/maps/api/js?v=3.23&key=<%= ENV["MAPS_API_KEY"] %>"></script>
+    <script src="//maps.google.com/maps/api/js"></script>
     <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
     <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
