--- a/app/views/home/services.html.erb
+++ b/app/views/home/services.html.erb
@@ -1,9 +1,9 @@
 <h3>
   Services
 </h3>
-<ul class="collection">
+<ul class="list-group">
   <% @services.each do |s| %>
-    <li class="collection-item">
+    <li class="list-group-item">
       <%= s %>
     </li>
   <% end %>
