--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,11 +14,10 @@
  *= require_self
  */
 
-@import "materialize";
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import "bootswatch/yeti/variables";
+@import "bootswatch/yeti/bootswatch";
+@import "bootswatch/yeti/bootswatch";
 @import "scatter";
 @import "styles";
-@media #{$medium-and-up} {
-  .container-desktop {
-    margin-left: 240px;
-  }
-}
