--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1,28 +1,3 @@
-$grey: #fafafa;
-$cyan: #00bcd4;
-.side-nav .brand-logo {
-  height: inherit;
-}
-.side-nav--link {
-  color: $grey !important;
-  transition: 0.5s;
-}
-.side-nav--link:hover,.side-nav--link:focus {
-  color: $cyan !important;
-  transition: 0.5s;
-}
-img.responsive-img {
-  max-width: 50%;
-  height: auto;
-}
-.map-container {
-  margin-top: 8%;
-}
-.input-field textarea[class=materialize-textarea]:focus {
-  border-bottom: 1px solid #00bcd4;
-  box-shadow: 0 1px 0 0 #00bcd4;
-}
-.input-field input[class=email]:focus {
-  border-bottom: 1px solid #00bcd4;
-  box-shadow: 0 1px 0 0 #00bcd4;
+.thumbnail {
+  max-width: 15%;
 }
