--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
-<div class="center">
-  <% @intro.each do |i| %>
-    <h3>
-      <%= i %>
-    </h3>
-  <% end %>
-</div>
-
-<div class="scatter">
+<div class="jumbotron">
+  <h1>
+    <%= @intro[0] %>
+  </h1>
+  <p>
+    <%= @intro[1] %>
+  </p>
+  <div class="scatter"></div>
+  <p><a class="btn btn-primary btn-lg" href="/technologies">Learn more</a></p>
 </div>
