--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Fink Analytical Consulting</title>
+    <title>Fink Analytics</title>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <script src="//maps.google.com/maps/api/js?v=3.23&key=<%= ENV["MAPS_API_KEY"] %>"></script>
     <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
@@ -11,9 +11,7 @@
   <body>
     <%= render partial: "partials/navbar" %>
     <div class="container">
-      <div class="container-desktop">
-        <%= yield %>
-      </div>
+      <%= yield %>
     </div>
   </body>
 </html>
