--- a/app/views/partials/_nav_links.html.erb
+++ b/app/views/partials/_nav_links.html.erb
@@ -1,12 +1,11 @@
-<li>
-  <%= link_to "Services", services_path, class: "side-nav--link" %>
-</li>
-<li>
-  <%= link_to "Technologies", technologies_path, class: "side-nav--link" %>
-</li>
-<li>
-  <%= link_to "About", about_path, class: "side-nav--link" %>
-</li>
-<li>
-  <%= link_to "Contact", contact_path, class: "side-nav--link" %>
-</li>
+<ul class="nav navbar-nav">
+  <li>
+    <%= link_to "Technologies", technologies_path, class: "side-nav--link" %>
+  </li>
+  <li>
+    <%= link_to "Services", services_path, class: "side-nav--link" %>
+  </li>
+  <li>
+    <%= link_to "Contact", contact_path, class: "side-nav--link" %>
+  </li>
+</ul>
