add new styling. thanks M.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,5 +19,6 @@
 @import "bootswatch/yeti/variables";
 @import "bootswatch/yeti/bootswatch";
 @import "bootswatch/yeti/bootswatch";
+@import "font-awesome";
 @import "scatter";
 @import "styles";
