--- a/app/views/partials/_nav_links.html.erb
+++ b/app/views/partials/_nav_links.html.erb
@@ -1,11 +1,11 @@
 <ul class="nav navbar-nav">
   <li>
-    <%= link_to "Technologies", technologies_path, class: "side-nav--link" %>
+    <%= link_to "Technologies", technologies_path, class: "nav-link" %>
   </li>
   <li>
-    <%= link_to "Services", services_path, class: "side-nav--link" %>
+    <%= link_to "Services", services_path, class: "nav-link" %>
   </li>
   <li>
-    <%= link_to "Contact", contact_path, class: "side-nav--link" %>
+    <%= link_to "Contact", contact_path, class: "nav-link" %>
   </li>
 </ul>
