--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">Fink Analytics</a>
+      <a class="navbar-brand" href="/">
+        <%= image_tag "Fink-Logo-xtra-large.png" %>
+      </a>
     </div>
     <%= render partial: "partials/nav_links" %>
   </div>
