add new success button

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -85,7 +85,7 @@ a {
   color: $dark-grey;
 }
 
-.btn-primary {
+.btn-primary, .btn-success {
   background-color: $green;
   border: none;
   color: $white;
